<resources>
    <string name="app_name">Green Room</string>
    <string name="enter_name">enter email</string>
    <string name="new_password">new password</string>
    <string name="change_password">change password</string>
    <string name="enter_password">enter password</string>
    <string name="login">login</string>
    <string name="registration">registration</string>
    <string name="reset_password">reset password</string>
</resources>